<resources>
    <string name="app_name">Testing</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="logged">Logged</string>
    <string name="main_activity_title">Main Activity Title</string>
    <string name="welcome_back">Welcome back %1$s</string>
</resources>